<resources>
    <string name="app_name">Jokes watcher</string>
    <string name="back">Back</string>
    <string name="reset_used_jokes">Reset used jokes</string>
    <string name="no_new_jokes">No new jokes are available.</string>
    <string name="generate_jokes">Generate a list of random jokes</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="no_new_jokes_available">No new jokes</string>
    <string name="select_category">Category</string>
    <string name="add_question">Question</string>
    <string name="add_answer">Answer</string>
    <string name="add_save">Save</string>
    <string name="generate_7_random_jokes">Generate 7 random jokes</string>
    <string name="add_joke">Add Joke</string>
    <string name="add_new_category">Add new category</string>
    <string name="fill_all_fields">Fill ALL fields</string>
    <string name="enter_category_name">Enter new category Name</string>
    <string name="add">Add</string>
    <string name="invalid_category">Invalid Category</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="select_avatar">Select image</string>
    <string name="avatar_preview">Avatar</string>
    <string name="choose_or_create_a_category">Choose or create a category:</string>
    <string name="unsaved_changes_message">Changes will be lost</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="exit">Exit</string>
    <string name="joke_added_successfully">Joke added successfully</string>
    <string name="joke_add_in_background">Joke is uploading in BG</string>
    <string name="unknown_error">Unknown error</string>
    <string name="DefaultDescription">TODO</string>
    <string name="own">Own</string>
    <string name="network">Network</string>
    <string name="default_label">Default</string>
    <string name="unknown">Unknown</string>
    <string name="database">Database</string>
    <string name="cache">Cache</string>
    <string name="view_jokes">View jokes</string>
    <string name="favourite_jokes">Favourite jokes</string>
    <string name="Greeting">Jokes watcher</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="favorite">Favotite</string>
    <string name="favorite_jokes">Favorite Jokes</string>
</resources>