<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.presentation.main_menu.MainMenuActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/jokesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/jokesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_jokes"
        android:background="@drawable/rounded_button"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:iconPadding="8dp"
        app:backgroundTint="@color/dark_prp"
        android:textColor="@color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/favourite_jokes"
        android:background="@drawable/rounded_button"
        app:cornerRadius="16dp"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:iconPadding="8dp"
        app:backgroundTint="@color/dark_red"
        android:textColor="@color/white"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/jokesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>